css/styles.css
/* ... */
.data-table tr td:first-of-type {
    -ms-hyphens: none;
    -moz-hyphens: none;
    -webkit-hyphens: none;
    hyphens: none;
}

table.docutils  {
    border-collapse: collapse;
    border-spacing: 0;
    empty-cells: show;
    background-color: transparent;
    table-layout: fixed; width: 100%;
    font-size:1.5rem;
    line-height: 1.8;
}

td {
    border: 1px solid #e1e4e5;
    margin: 0;
    padding: 16px;
    overflow: hidden;
    width: 200px;
}

th {
    border: 1px solid #e1e4e5;
    margin: 0;
    overflow: visible;
    padding: 8px 16px;
    text-align:left;
    background-color:#ccc;
}

tr:nth-child(even) {
    background-color: #f2f2f2;
}
tr:nth-child(odd) {
    background-color: white;
}

/* Configuration lists */
.config-list>li {
    list-style-type: none;
    padding: 15px 0px 15px 20px;
    border-bottom: 1px solid black;
}

.config-list h4 {
    margin: 0;
}

.config-list table *{
    border: 0;
    background-color: transparent;
    padding: 0;
}

.config-list tr {
    border-width: 0;
    background-color: transparent;
}

.config-list th {
    text-align: right;
}

.config-list td {
    text-align: left;
    padding: 0px 0px 0px 10px;
}

.config-list>li:nth-child(odd) {
    background: #f2f2f2;
}
.page-dark,
.page-dark * {
    box-sizing: border-box;
}
.page-dark .config-list {
    padding-left: 0;
}
.page-dark .config-list>li:nth-child(odd) {
    background: rgba(0, 0, 0, 0.2);
}
.page-dark .config-list td {
    color: white;
}

.page-dark .config-list .data-table {
    width: auto;
}

.page-dark code {
    background-color: rgba(0, 0, 0, 0.2);
    border-color: rgba(0, 0, 0, 0.3);
    border-radius: 0.3rem;
    font-size: 1.4rem;
}

.horizontal-list li {
    display: inline-block;
}

.horizontal-list li:before {
    content: '\00a0\00a0\2015\00a0';
}

.horizontal-list li:first-child:before {
    content: '';
}

.highlight pre span {
    font-size:1.4rem;
}
.logo-link {
    display: inline-block;
    width: 220px;
    height: 64.77px;
    background: url("/images/logo.png");
    background-size: 217px auto;
    background-repeat: no-repeat;
    /* small: 168 x 50 */
}
.page-dark .logo-link {
    background: url('/logos/kafka-white.svg');
    background-repeat: no-repeat;
}
.page-dark {
    background: #363D3F;
    color: white;
    margin: 0;
}
.page-dark .content {
    max-width: 100rem;
}
.page-dark .content-separator {
    max-width: 100rem;
    background-color: #969191;
    border: none;
    height: 1px;
}
.page-dark .content-get-started {
    margin-top: 7rem;
}
.page-dark a:link {
    color: var(--green);
}
.page-dark a:visited {
    color: var(--green);
}
.page-dark .top-nav-item-anchor:link,
.page-dark .top-nav-item-anchor:active,
.page-dark .top-nav-item-anchor:visited,
.page-dark .top-nav-anchor:link,
.page-dark .top-nav-anchor:active,
.page-dark .top-nav-anchor:visited {
    color: white;
    text-decoration: none;
}
.page-dark .top-nav-item-anchor:hover,
.page-dark .top-nav-anchor:hover,
.page-dark .top-nav-item-anchor:focus,
.page-dark .top-nav-anchor:focus {
    color: var(--green);
}
.page-dark .top-nav-menu {
    background-color: #373E40;
}
.page-dark .header {
    background-color: #363D3F;
}
.page-dark .header.scrolled {
    background-color: #373E40;
}
.page-dark .top-nav-download {
    background: linear-gradient(90deg, #427583 -15.13%, var(--green) 100%), #0A1011;
    color: white !important; /* ignoring link colors */
}
.page-dark .top-nav-download:hover {
    background: linear-gradient(90deg, #427583 -15.13%, #80bdbd 100%), #0A1011;
}
.page-dark .anchor-heading {
    position: relative;
}
.anchor-link,
.header-link {
    position: relative;
    top: -12rem;
    left: 0;
}
.page-dark .docs-title,
.page-dark .content-title {
    font-family: Roboto;
    font-weight: bold;
    font-size: 3rem;
    line-height: 4.2rem;
    text-transform: uppercase;
    color: #FFFFFF;
}
#docs-top-link {
    position: fixed;
    bottom: 6.5rem;
    right: 1rem;
    display: block;
    padding: .5rem 1.5rem;
    background: linear-gradient(90deg, #427583 -15.13%, var(--green) 100%), #0A1011;
    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.38);
    color: white !important; /* ignoring link colors */
    text-transform: uppercase;
    text-align: center;
    text-decoration: none;
}
.docs-toc-title {
    margin-top: 0;
}
/* helper classes */

.centered {
    display: block;
    margin: auto;
}
.pb-10 {
    display: inline-block;
    padding-bottom: 1rem;
}
/* components */

.main {
    width: auto;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
.header {
    padding: 2rem 0 1rem;
    background-color: #FFFFFF;
    position: fixed;
    left: 0;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    padding: 2rem 2.2rem;
    width: 100%;
    box-sizing: border-box;
    margin: 0 auto;
    z-index: 99;
    transition: box-shadow 0.5s;
}
.header.scrolled {
    box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.38);
    margin: 0;
}
.burger-toggle {
    padding: .4rem;
    border-radius: .3rem;
    width: 4rem;
    height: 4rem;
    border: 1px solid #ccc;
    background-color: white;
}
.burger-toggle .burger-line {
    display: block;
    width: 80%;
    margin: 6px auto;
    height: 2px;
    background-color: black;
    border-radius: 2px;
}
.page-dark .burger-toggle {
    padding: .4rem;
    border-radius: .3rem;
    width: 4rem;
    height: 4rem;
    border: 1px solid rgba(0, 0, 0, 0.3);
    background-color: rgba(0, 0, 0, 0.1);
}
.page-dark .burger-toggle .burger-line {
    background-color: white;
}
.top-nav-toggle {
    display: none;
}
.top-nav-container {
    display: flex;
    box-sizing: border-box;
}
/* ... */

